Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56268

windeployqt :: Unable to query qmake: Error creating stdout temporary file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.3
    • 5.7.0
    • None
    • qt 5.7.0 window 7 64 bit;
    • 20d14f201e2066b3d738dd15e5cb1ca3b1d2f925 (qttools/5.6, 11.10.2016, 5.6.3)

    Description

      I call windeployqt.exe from the command line, but it gives the following error:

      "Unable to query qmake: Error creating stdout temporary file"

      This message gives me no clue what is wrong or how I should fix it. Google gives surprisingly few hits.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            kees Kees
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes