windeployqt: Fix temporary file leak

Set FILE_FLAG_DELETE_ON_CLOSE on the files used
for redirectoring process outputs.

Task-number: QTBUG-56268
Change-Id: Ia0b25ed9067e0a40a9b83dc7d10a9cf15ac63b70
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>